Add Paths#get to forbidden APIs (#3289)
* add Paths.get to forbidden apis
* replace Paths.get with Path.of


Co-authored-by: Andrey Bozhko <abozhko@apple.com>