@@ -24,7 +24,6 @@ import java.net.URL;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -136,7 +135,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
 
     final String newBackupDir = backupStatus.waitForDifferentBackupDir(lastBackupDir, 30);
     // Validate
-    verify(Paths.get(leader.getDataDir(), newBackupDir), nDocs);
+    verify(Path.of(leader.getDataDir(), newBackupDir), nDocs);
   }
 
   private void verify(Path backup, int nDocs) throws IOException {
@@ -163,7 +162,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
     int nDocs = BackupRestoreUtils.indexDocs(leaderClient, DEFAULT_TEST_COLLECTION_NAME, docsSeed);
 
     lastBackupDir = backupStatus.waitForDifferentBackupDir(lastBackupDir, 30);
-    snapDir[0] = Paths.get(leader.getDataDir(), lastBackupDir);
+    snapDir[0] = Path.of(leader.getDataDir(), lastBackupDir);
 
     final boolean namedBackup = random().nextBoolean();
 
@@ -186,7 +185,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
         lastBackupDir = backupStatus.waitForBackupSuccess(backupName, 30);
         backupNames[i] = backupName;
       }
-      snapDir[i + 1] = Paths.get(leader.getDataDir(), lastBackupDir);
+      snapDir[i + 1] = Path.of(leader.getDataDir(), lastBackupDir);
       verify(snapDir[i + 1], nDocs);
     }
 
@@ -199,7 +198,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
       final List<String> remainingBackups = new ArrayList<>();
 
       try (DirectoryStream<Path> stream =
-          Files.newDirectoryStream(Paths.get(leader.getDataDir()), "snapshot*")) {
+          Files.newDirectoryStream(Path.of(leader.getDataDir()), "snapshot*")) {
         Iterator<Path> iter = stream.iterator();
         while (iter.hasNext()) {
           remainingBackups.add(iter.next().getFileName().toString());
@@ -236,7 +235,7 @@ public class TestReplicationHandlerBackup extends SolrJettyTestBase {
     final BackupStatusChecker backupStatus =
         new BackupStatusChecker(leaderClient, "/" + DEFAULT_TEST_CORENAME + "/replication");
     for (int i = 0; i < 2; i++) {
-      final Path p = Paths.get(leader.getDataDir(), "snapshot." + backupNames[i]);
+      final Path p = Path.of(leader.getDataDir(), "snapshot." + backupNames[i]);
       assertTrue("WTF: Backup doesn't exist: " + p, Files.exists(p));
       runBackupCommand(
           leaderJetty, ReplicationHandler.CMD_DELETE_BACKUP, "&name=" + backupNames[i]);
